aug-19/active-semi/ThompsonSampling_1.stderr
Using backend: pytorch
Traceback (most recent call last):
  File "scripts/active/belief_active_plot.py", line 14, in <module>
    import pinot
  File "/home/nguyenm5/coding/pinot/pinot/__init__.py", line 13, in <module>
    import pinot.active
  File "/home/nguyenm5/coding/pinot/pinot/active/__init__.py", line 1, in <module>
    from pinot.active import acquisition, batch_acquisition, biophysical_acquisition, experiment
  File "/home/nguyenm5/coding/pinot/pinot/active/experiment.py", line 614
    print("Picking initialization took", end-start, "seconds)
                                                            ^
SyntaxError: EOL while scanning string literal
Using backend: pytorch
Traceback (most recent call last):
  File "scripts/active/belief_active_plot.py", line 14, in <module>
    import pinot
  File "/home/nguyenm5/coding/pinot/pinot/__init__.py", line 13, in <module>
    import pinot.active
  File "/home/nguyenm5/coding/pinot/pinot/active/__init__.py", line 1, in <module>
    from pinot.active import acquisition, batch_acquisition, biophysical_acquisition, experiment
  File "/home/nguyenm5/coding/pinot/pinot/active/experiment.py", line 614
    print("Picking initialization took", end-start, "seconds)
                                                            ^
SyntaxError: EOL while scanning string literal
Using backend: pytorch
